# qr.fossuok.org

./: .env.example  .gitignore  README.md  main.py  pyproject.toml
config/: __init__.py  db.py  supabase.py
middleware/: perf_logger.py
models/: __init__.py  event.py  user.py
routes/: __init__.py  admin.py  api.py  auth.py  users.py
schemas/: __init__.py  auth.py  user.py
scripts/: verify_supabase.py
services/: __init__.py  admin.py  auth.py  event.py  mail.py  user.py
static/css/: styles.css
static/js/: admin_events.js  login.js  register.js  user_events.js  verify.js
templates/: admin_events.html  admin_users.html  dashboard.html  layout.html  login.html  register.html  success.html  verify.html
